# kabinet-parser

./: .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  Dockerfile.caddy  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1a5662d00874_files_page_cache.py  29bfe4193df0_exam_main_type.py  364668a757c7_marks_created_at.py  6d80c9e6f97d_lessons_and_schedule_sync_state.py  800af1e9e52c_exams_and_exam_sync_state.py  8f12d3fc610a_envelope_encryption_per_user_dek.py  91b95269842f_subjects_marks_grading_details_and_.py  9c9732ec2c8a_users_is_admin.py  a337d00ecab0_users_language.py  b7919ce53513_push_subscriptions.py  bad98e8dd5aa_marks_drop_unique_constraint.py  c322976fbbc7_users_and_unec_credentials.py
frontend/: Dockerfile  env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  router.ts  sw.ts
frontend/src/api/: client.ts  types.ts
frontend/src/i18n/: index.ts
scripts/: backup_postgres.sh
secrets/: .gitignore  README.md
src/unec/: cli.py  config.py  i18n.py
tests/: conftest.py  test_auth_api.py  test_evaluation_parsers.py  test_grades_api_e2e.py  test_schedule_api_e2e.py  test_schedule_orm_mapping.py  test_schedule_parser.py  test_unec_client_cookies.py  test_unec_session_e2e.py
tests/fixtures/: grades_popup_vbs.html  grades_semester_options.html  grades_subjects_2025-26-II.html  grades_subjects_empty.html  schedule_2025-26.html
(+79 files in other folders)
