[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unec-cabinet"
version = "0.1.0"
description = "Faster, cleaner wrapper over the UNEC student cabinet"
requires-python = ">=3.13"
dependencies = [
    # Scraper
    "httpx>=0.27",
    "selectolax>=0.3.21",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # DB
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Cache + jobs
    "redis>=5.0",
    "arq>=0.26",
    # Auth + crypto
    "argon2-cffi>=23.1",
    "cryptography>=43",
    "pyjwt>=2.9",
    "slowapi>=0.1.9",
    # Web Push (PWA notifications) — VAPID + payload encryption.
    "pywebpush>=2.0",
    # Country-aware holiday calendar (Azerbaijan), with rules for moved
    # weekends and movable Islamic dates.
    "holidays>=0.55",
    # Settings + CLI
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "email-validator>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
unec = "unec.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"unec.locales" = ["*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
